--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,7 +13,7 @@
 	        <%= f.label :date %>
 	        <%= f.date_field :date, class: 'form-control' %>
 
-	        <%= f.submit "Update Event", class: "btn btn-primary navbar-btn" %>
+	        <%= f.submit "Update Event", class: "btn custom-btn range-button" %>
 	      <% end %>
 
 	    </div>
@@ -22,15 +22,12 @@
 
 
 	<div class="col-md-3">
-		<a class="btn btn-default share_button" href="/events/<%=@event.id%>/checkins/new" role="button">Go To Student Sign In  <span class="glyphicon glyphicon-share"></span></a>
-
-		<%= button_to 'Delete Event', event_path(@event), class: 'btn btn-danger navbar-btn' , 
-		data: {:confirm => 'Are you sure? This will delete report information as well.'}, :method => :delete %>
+		<a class="btn custom-btn navbar-btn" href="/events/<%=@event.id%>/checkins/new" role="button">Go To Student Sign In  <span class="glyphicon glyphicon-share"></span></a>
 	</div>
 
 	
 
-	<form action="/movies/<%=@event.id%>" method="post">
+	<form class="p-1" action="/movies/<%=@event.id%>" method="post">
 		<table class="table">
 			<thead class="">
 				<tr class="table-bordered">
@@ -39,8 +36,8 @@
 					<th></th>
 				</tr>
 				<tr>
-					<th>
-						<span class ='label label-success' role='button' id='new_movie'>add movies <span class="glyphicon glyphicon-plus"></span> </span>
+					<th class="p-0">
+						<span class ='btn custom-btn navbar-btn' role='button' id='new_movie'>Add Movie <span class="glyphicon glyphicon-plus"></span> </span>
 					</th>
 				</tr>
 			</thead>
@@ -60,7 +57,15 @@
 				<% end %>	
 			</tbody>
 		</table>
-		<button class="btn btn-default" name="commit" type='submit'>Save Movies <span class="glyphicon glyphicon-save"></span></button>
+
+		<button class="btn custom-btn navbar-btn" name="commit" type='submit'>
+			Save Movies <span class="glyphicon glyphicon-save"></span>
+		</button>
+
+		<br>
+
+		<%= button_to 'Delete Event', event_path(@event), class: 'btn custom-btn-dngr navbar-btn' , 
+		data: {:confirm => 'Are you sure? This will delete report information as well.'}, :method => :delete %>
 	</form>
 </div>
 
