added indivitual page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -246,3 +246,8 @@ nav.navbar.navbar-default.navbar-static-top a:hover{
 .chart-title{
 	margin-bottom: 0px;
 }
+
+.student_table td{
+    font-size: 15px;
+
+}
