--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,2 @@
-<h1 class=text-center> Welcome To Student Film Night</h1>
+<h1 class="text-center title"> Welcome To Student Film Night</h1>
+<%= image_tag("filmhero.jpg", class: "bg") %>
