--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -101,8 +101,8 @@ h3 {
 	border-radius:0px;
 	margin-top: 8px;
 	background-color: #679ac9;
-	border: 1px solid #fff;
-    color: #fff;
+  border: 1px solid rgba(255, 0, 0, .0);
+  color: #fff;
 }
 
 .custom-btn:hover{
@@ -115,7 +115,7 @@ h3 {
     border-radius:0px;
     margin-top: 8px;
     background-color: #d9534f;
-    border: 1px solid #fff;
+    border: 1px solid rgba(255, 0, 0, .0);
     color: #fff;
 }
 
@@ -130,7 +130,7 @@ h3 {
     border-radius:0px;
     margin-top: 8px;
     background-color: #2cd04f;
-    border: 1px solid #fff;
+    border: 1px solid rgba(255, 0, 0, .0);
     color: #fff;
 }
 
@@ -153,7 +153,7 @@ h3 {
 	/*relative pushes this above noise*/
 	position:relative;
 	padding:5px;
-  background-color:black;
+  background-color:#222222;
   text-align:center;
   font-size: 12px;
   padding-top: 10px;
@@ -297,6 +297,7 @@ nav.navbar.navbar-default.navbar-static-top a:hover{
 }
 
 /*background image*/
+
 img.bg {
   z-index:-10;
   /* Set rules to fill background */
@@ -318,4 +319,8 @@ img.bg {
     left: 50%;
     margin-left: -512px;   /* 50% */
   }
+}
+
+img.fade{
+  opacity:0.2;
 }
