--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 	<link rel="shortcut icon" href="http://www.filmstreams.org/wp-content/themes/filmstreams/inc/images/favicon.ico" />
 </head>
 	<body >
+    <%= image_tag("filmhero.jpg", class: "bg fade") %>
     <div class="cHeader">
       <%= render 'layouts/header' %>
     </div>
