--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -10,7 +10,7 @@
         <%= f.label :password %>
         <%= f.password_field :password, class: 'form-control' %>
 
-        <%= f.submit "Submit", class: "btn btn-primary" %>
+        <%= f.submit "Submit", class: "btn custom-btn" %>
       <% end %>
     </div>
   </div>
