added event graphs

--- a/app/views/layouts/_stats_header.html.erb
+++ b/app/views/layouts/_stats_header.html.erb
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-default navbar-static-top">
   <div class="container">
-  	<p class="navbar-text"><a href="/statistics">Stats Main</a></p>
-  	<p class="navbar-text"><a href="/statistics/all_time">All Time</a></p>
+  	<p class="navbar-text"><a href="/statistics">Overview</a></p>
   	<p class="navbar-text"><a href="/statistics/by_date">By Date Range</a></p>
   	<p class="navbar-text"><a href="/statistics/list?year=<%=Date.today.year%>">Per Event</a></p>
   </div>
