--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -249,5 +249,17 @@ nav.navbar.navbar-default.navbar-static-top a:hover{
 
 .student_table td{
     font-size: 15px;
+}
+.btn-space {
+    margin-top: 5px !important;
+}
+
+.button-block{
+    width: 100%;
+}
+
+.form-control.selectpicker{
+    display: inline-block;
+    max-width: 125px;
 
 }
