--- a/app/views/statistics/list.html.erb
+++ b/app/views/statistics/list.html.erb
@@ -22,12 +22,14 @@
 				</thead>
 				<tbody>
 					<%  event_list_by_year.each do |event|  %>
-								<tr>
-									<td><a href="/statistics/<%= event.id %>?year=<%=params[:year]%>&event=<%=event.date%>"><%= event.date %></a></td>
-									<td><%= Event.new.students_by_event(event.date) %></td>
-									<td><%= Event.new.school_by_event(event.date)   %></td>
-								</tr>
+						<% if event.attendances.count > 0 %>
+							<tr>
+								<td><a href="/statistics/<%= event.id %>?year=<%=params[:year]%>&event=<%=event.date%>"><%= event.date %></a></td>
+								<td><%= Event.new.students_by_event(event.date) %></td>
+								<td><%= Event.new.school_by_event(event.date)   %></td>
+							</tr>
 						<% end %>
+					<% end %>	
 				</tbody>
 			</table>
 	  </div>
