--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -26,10 +26,10 @@
 						<%= event.title %>
 					</td>
 					<td>
-						<a href="events/<%= event.id %>" class="btn btn-default borderless">
+						<a href="events/<%= event.id %>" class="btn custom-btn borderless">
 							Edit <span class="glyphicon glyphicon-edit"></span>
 					  </a>
-					  <a href="events/<%= event.id %>/checkins/new" class="btn btn-default borderless">
+					  <a href="events/<%= event.id %>/checkins/new" class="btn custom-btn borderless">
 					  	Student Sign In<span class="glyphicon glyphicon-view"></span>
 		 			  </a>
 					</td>
