changing delete glyphicon placement and hover

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -95,6 +95,16 @@ h3 {
 	font-size:40px;
 }
 
+.delete-icon{
+    top: 8px;
+    left: 5px;
+}
+
+.delete-icon:hover{
+  
+}
+
+
 /* -------------button styling ---------------------*/
 
 .custom-btn{
