--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -9,8 +9,9 @@
 
         <%= f.label :password %>
         <%= f.password_field :password, class: 'form-control' %>
-
-        <%= f.submit "Submit", class: "btn custom-btn" %>
+        <div class="row">
+          <%= f.submit "Login", class: "btn custom-btn col-md-4 col-md-offset-4" %>
+        </div>
       <% end %>
     </div>
   </div>
