--- a/app/views/checkins/new.html.erb
+++ b/app/views/checkins/new.html.erb
@@ -16,7 +16,9 @@
           <%= f.text_field :email_confirmation, class: "form-control" %>
         </div>
 
-        <%= f.submit "Submit", class: "btn custom-btn" %>
+        <div class="row">
+          <%= f.submit "Login", class: "btn custom-btn col-md-4 col-md-offset-4" %>
+        </div>
       <% end %>
     </div>
   </div>
