--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -12,7 +12,7 @@
         	<%= f.label :date %>
         	<%= f.date_field :date, class: 'form-control' %>
 
-        	<%= f.submit "Save Event", class: "btn custom-btn range-button" %>
+        	<%= f.submit "Save Event", class: "btn custom-btn navbar-btn" %>
       	<% end %>
 	    </div>
 	  </div>
