--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -49,7 +49,7 @@
 								<td><%= movie_f.time_field :time, placeholder: "movie time", class: 'form-control'%></td>
 								<td><%= movie_f.text_field :delete, :value => "0", class: 'collapse delete_row'%>
 								<%= movie_f.number_field :event_id, class: 'collapse form-control event_id'%>
-								<span class="glyphicon glyphicon-remove text-danger remove_movie" role="button"></span></td>
+								<span class="glyphicon glyphicon-remove text-danger remove_movie delete_icon" role="button"></span></td>
 							</tr>
 					<% end %>
 				<% end %>	
