--- a/app/views/attendances/new.html.erb
+++ b/app/views/attendances/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container bottom_space">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h2 class="text-center">Complete Checkin</h2>
+      <h2 class="text-center">Complete Check-In</h2>
       <h4 class="text-center">What movie are you seeing tonight?</h4>
 
       <hr>
@@ -18,7 +18,7 @@
       		<br>
       	<% end %>
 
-      	<%= f.submit "Finish Checkin!", class: "btn custom-btn" %>
+      	<%= f.submit "Finish Check-In!", class: "btn custom-btn" %>
       <% end %>
     </div>
   </div>
