--- a/app/views/checkins/new.html.erb
+++ b/app/views/checkins/new.html.erb
@@ -17,7 +17,7 @@
         </div>
 
         <div class="row">
-          <%= f.submit "Login", class: "btn custom-btn col-md-4 col-md-offset-4" %>
+          <%= f.submit "Check-In", class: "btn custom-btn col-md-4 col-md-offset-4" %>
         </div>
       <% end %>
     </div>
