--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -29,5 +29,7 @@
     {include_blank: "How did you hear about free movie night?"},{ :class => 'form-control' })%>
   </div>
 
-  <%= f.submit "Continue!", class: "btn custom-btn" %>
+  <div class="row">
+    <%= f.submit "Continue!", class: "btn custom-btn col-md-4 col-md-offset-4" %>
+  </div>
 <% end %>
