--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -11,8 +11,9 @@
 
         	<%= f.label :date %>
         	<%= f.date_field :date, class: 'form-control' %>
-
-        	<%= f.submit "Save Event", class: "btn custom-btn navbar-btn" %>
+          <div class="row">
+            <%= f.submit "Save Event", class: "btn custom-btn col-xs-4 col-xs-offset-4" %>
+          </div>          
       	<% end %>
 	    </div>
 	  </div>
