--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -30,6 +30,6 @@
   </div>
 
   <div class="row">
-    <%= f.submit "Continue!", class: "btn custom-btn col-md-4 col-md-offset-4" %>
+    <%= f.submit "Continue!", class: "btn custom-btn col-xs-4 col-xs-offset-4" %>
   </div>
 <% end %>
