--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
+    <div class="col-sm-6 col-sm-offset-3">
       <%= render 'layouts/error_messages' %>
       <%= form_for :user do |f| %>
       
@@ -10,7 +10,7 @@
         <%= f.label :password %>
         <%= f.password_field :password, class: 'form-control' %>
         <div class="row">
-          <%= f.submit "Login", class: "btn custom-btn col-md-4 col-md-offset-4" %>
+          <%= f.submit "Login", class: "btn custom-btn col-xs-4 col-xs-offset-4" %>
         </div>
       <% end %>
     </div>
