--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
 	<link rel="shortcut icon" href="http://www.filmstreams.org/wp-content/themes/filmstreams/inc/images/favicon.ico" />
 </head>
-	<body class="noise vignette" >
+	<body class="" >
     <div class="cHeader">
       <%= render 'layouts/header' %>
     </div>
