--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -263,3 +263,13 @@ nav.navbar.navbar-default.navbar-static-top a:hover{
     max-width: 125px;
 
 }
+
+.badge {
+    font-size: 15px;
+}
+
+.list-group.summary-box{
+    max-width: 250px;
+    margin: 0 auto;
+    text-align: center;
+}
