--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,22 +1,14 @@
 <%= render 'layouts/stats_header' %>
-
-
 <div class="container">
 
 	<%= line_chart [
 	  {name: "All Attendances", data: Attendance.all.group_by_year(:created_at).count.map},
 	  {name: "Unique Students", data: Attendance.all.group_by_year(:created_at).select(:student_id).uniq.count.map},
 	  {name: "Unique Schools", data: Attendance.group_by_year('attendances.created_at').joins(:student => :school).select('schools.name').uniq.count.map} 
-
 	]%>  
-
-	<%= line_chart [
-	  {name: "Unique Schools", data: Attendance.group_by_year('attendances.created_at').joins(:student => :school).select('schools.name').uniq.count.map} 
-	]%>  
-
-	<span class="text-primary">Total Attendances = <%= @attendances %></span><br>
-  <span class="text-primary">Avg Yearly Attendances = <%= @attendances/@years.length %></span><br>
 	<h2>Attendances By Year</h2>
+	Total Attendances = <%= @attendances %><br>
+	Avg Yearly Attendances = <%= @attendances/@years.length %>
 	<table class="table table-bordered">
 		<thead>
 			<tr>
