--- a/app/views/statistics/show.html.erb
+++ b/app/views/statistics/show.html.erb
@@ -5,16 +5,16 @@
 	<div class="row">
 	  <div class="col-sm-2">
 			<form action="/statistics/list" method="get">
-				<select name="year" value="3" class="form-control">
+				<select name="year" class="form-control">
 			
-				<%= @event_years.each do |year| %>
-					<option <%= (params[:year] == year.to_s) ? "selected='selected'" : "" %>value='<%= year %>'><%=year%></option>
+				<% @event_years.each do |year| %>
+					<option <%= (params[:year] == year.to_s) ? "selected=selected" : "" %> value=<%= year %> ><%=year%></option>
 				<% end %>
 				</select>
 				<button class='btn btn-default btn-space button-block' type='submit'>Update List</button>
 			</form>
+			<h4>Stats by event</h4>
 			<table class="table table-bordered">
-				<h4>Stats by event</h4>
 				<thead>
 					<tr>
 						<th>EVENT</th>
