--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -188,7 +188,7 @@ nav.navbar.navbar-default.navbar-static-top{
 
 nav.navbar.navbar-default.navbar-static-top a{
 	// color: #9d9d9d;
-	color: #5BC0DE;
+	color: #6f878e;
 	text-decoration: none;
 }
 
@@ -247,4 +247,10 @@ img.bg {
     max-width: 250px;
     margin: 0 auto;
     text-align: center;
+}
+
+.stats-sums   {
+
+  border-top: solid 2px;
+  border-color: gray;
 }
