--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -3,12 +3,10 @@
 
 	<%= line_chart [
 	  {name: "All Attendances", data: Attendance.all.group_by_year(:created_at).count.map},
-	  {name: "Unique Students", data: Attendance.all.group_by_year(:created_at).select(:student_id).uniq.count.map},
-	  {name: "Unique Schools", data: Attendance.group_by_year('attendances.created_at').joins(:student => :school).select('schools.name').uniq.count.map} 
+	  {name: "Unique Students", data: @unique_students.map},
+	  {name: "Unique Schools", data:  @unique_schools.map} 
 	]%>  
 	<h2>Attendances By Year</h2>
-	Total Attendances = <%= @attendances %><br>
-	Avg Yearly Attendances = <%= @attendances/@years.length %>
 	<table class="table table-bordered">
 		<thead>
 			<tr>
@@ -27,6 +25,18 @@
 					<td><%= Event.new.unique_schools(year) %></td>
 				</tr>
 			<% end %>
+			  <tr class="stats-sums">
+			  	<td>Total</td>
+			  	<td><%= @attendances %></td>
+			  	<td><%= Student.count %></td>
+			  	<td><%= School.count %></td>
+			  </tr>
+			  <tr>
+			  	<td>Ave</td>
+			  	<td><%= @attendances/@years.length %></td>
+			  	<td><%= @unique_students.values.sum/@unique_students.count %></td>
+			  	<td><%= @unique_schools.values.sum/@unique_schools.count %></td>
+			  </tr>
 		</tbody>
 	</table>
 </div>
