--- a/app/views/statistics/show.html.erb
+++ b/app/views/statistics/show.html.erb
@@ -37,7 +37,6 @@
 	  	<hr>
 
 			<h4>Summary</h4>
-
 			<ul class="list-group summary-box">
 			  <li class="list-group-item justify-content-between">
 			    Students
@@ -69,7 +68,8 @@
 				<tbody>
 					<%  Hash[@schools.sort_by{|k,v| v}.reverse].each do |name, num|  %> 
 								<tr>
-									<td> <%= name %></td>
+			
+									<td> <a href="/statistics/school/<%=School.find_by(:name => name).id %>"><%= name %></a></td>
 									<td> <%= num %></td>
 								</tr>
 						<% end %>
