--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 		<nav class="navbar navbar-inverse">
 	  <div class="container">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="/">Film Streams Student Night</a>
+	      <a class="navbar-brand">Film Streams Student Night</a>
 	    </div>
 	    <ul class="nav navbar-nav navbar-right">
 				<% if !session[:user_id].nil? %>
