made name disappear after 2 seconds on checkin

--- a/app/views/checkins/new.html.erb
+++ b/app/views/checkins/new.html.erb
@@ -23,3 +23,11 @@
     </div>
   </div>
 </div>
+
+<script>
+  $(function() {
+    setTimeout(function(){
+      $('.disappear_name').slideUp(500);
+    }, 2000);
+  });
+</script>
