--- a/app/views/statistics/by_date.erb
+++ b/app/views/statistics/by_date.erb
@@ -31,7 +31,6 @@
 	<div class="row">
 		<div class="col-sm-4">
 			<h4>Students</h4>
-			<span>Total unique students <%= @students.length %></span>
 			<table class="table table-bordered">
 				<thead>
 					<tr>
@@ -52,12 +51,12 @@
 		</div>
 	  <div class="col-sm-4">
 	  	<h4>Schools</h4>
-	  	Total unique schools <%= @schools.length %>
 			<table class="table table-bordered">
 				<thead>
 					<tr>
 						<th>Schools</th>
 						<th>Attends</th>
+						<th>Avg</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -65,6 +64,7 @@
 							<tr>
 								<td><a href="/statistics/school/<%=school[1]%>"><%= school[0] %></a></td>
 								<td><%= num %></td>
+								<td><%= ((num.to_f / @schools.values.sum.to_f) * 100).round(1)  %>%</td>
 							</tr>
 						<% end %>
 				</tbody>
